# tauri-plugin-tracing

./: .gitignore  .prettierignore  .taurignore  CHANGELOG.md  Cargo.toml  README.md  biome.json  build.rs  justfile  package.json  pnpm-lock.yaml  rollup.config.js  taplo.toml
.cargo/: config.toml
.changes/: add-custom-layers.md  add-documentation.md  add-file-logging.md  add-filter.md  add-flamegraph-permissions.md  add-flamegraph.md  add-format.md  add-log-rotation.md  add-max-file-size.md  add-package-links.md  add-release-channel-checking-to-ci.md  add-specta.md  add-strip-ansi-writer.md  add-target-filters.md  add-targets-api.md  add-timezone-strategy.md  add-timing.md  add-webview-layer.md  auto-docs-upload.md  config.json  deny-unwrap-lints.md  fine-tune-ci-workflows.md  fix-console-css-expansion.md  fix-doc-annotations.md  fix-doc-links.md  fix-doctests.md  fix-empty-call-stack.md  fix-file-logging-docs.md  flamegraph-custom-subscriber.md  flamegraph-docs-clarification.md  inclue-window-name-in-tracing-logs.md  move-to-github-packages.md  patch-various-bugs.md  pre.json  profiling-integration.md  readme-update.md  release-0.2.0.md  remove-kellnr-config.md  set-up-publish-jobs.md  shorten-readme.md  (+10 more)
.github/workflows/: bench.yml  check-change-files.yml  check-javascript.yml  check-rust.yml  covector-comment-on-fork.yml  covector-status.yml  covector-version-or-publish.yml  fmt.yml  lint-javascript.yml  lint-rust.yml
.scripts/ci/: check-change-files.js  get-release-channel.cjs
benches/: callstack.rs  strip_ansi.rs
dist-js/: api-iife.js  console.d.ts  flamegraph.d.ts  index.cjs  index.d.ts  index.js  listener.d.ts  log.d.ts  timing.d.ts  types.d.ts  utils.d.ts
examples/custom-subscriber/: pnpm-lock.yaml  tsconfig.json
examples/custom-subscriber/src/: App.tsx  main.tsx
examples/custom-subscriber/src-tauri/: Cargo.toml  tauri.conf.json
examples/custom-subscriber/src-tauri/capabilities/: default.json
examples/custom-subscriber/src-tauri/src/: lib.rs  main.rs
examples/custom-subscriber/src-tauri/tests/: integration.rs
examples/default-subscriber/: package.json  pnpm-lock.yaml  vite.config.js
examples/default-subscriber/src/: main.tsx
examples/default-subscriber/src-tauri/: .gitignore  Cargo.toml
examples/default-subscriber/src-tauri/src/: lib.rs  main.rs
examples/default-subscriber/src-tauri/tests/: integration.rs
examples/tauri-app/: README.md  package.json  pnpm-lock.yaml  vite.config.js
examples/tauri-app/src/: App.tsx  logger.tsx  main.tsx
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
examples/tauri-app/src-tauri/tests/: integration.rs
guest-js/: console.ts  flamegraph.ts  index.bench.ts  index.test.ts  index.ts  listener.ts  log.ts  timing.ts  types.ts  utils.ts
permissions/: default.toml  generate-flamechart.toml  generate-flamegraph.toml  log.toml  time-end.toml  time.toml
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
src/: builder.rs  callstack.rs  commands.rs  desktop.rs  error.rs  flamegraph.rs  layer.rs  lib.rs  models.rs  profiling.rs  strip_ansi.rs  timing.rs  types.rs  util.rs
