[workspace]
members = ["examples/default-subscriber/src-tauri", "examples/custom-subscriber/src-tauri"]
resolver = "2"

[package]
authors = ["Flight Science"]
name = "tauri-plugin-tracing"
license = "MIT"
edition = "2024"
version = "0.2.0-canary.7"
repository = "https://github.com/fltsci/tauri-plugin-tracing"
description = "Use the tracing crate in your Tauri app"
links = "tauri-plugin-tracing"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
publish = ["kellnr"]

[workspace.metadata.platforms.support]
windows = { level = "unknown", notes = "" }
linux = { level = "unknown", notes = "" }
macos = { level = "full", notes = "" }
android = { level = "unknown", notes = "" }
ios = { level = "unknown", notes = "" }

[build-dependencies]
tauri-plugin = { version = "2.5.2", features = ["build"] }

[workspace.dependencies]
serde = { version = "1.0.228", default-features = false }
tauri = { version = "2.9.5" }
thiserror = { version = "2.0.17", default-features = false }
serde_repr = "0.1.20"
tokio = { version = "1.48.0", features = ["full"] }
tracing = { version = "0.1.43" }
time = { version = "0.3.44", default-features = false }
tracing-appender = "0.2.4"
tracing-core = "0.1.35"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
colored = { version = "3.0.0" }
specta = { version = "=2.0.0-rc.22", features = ["derive"] }
ahash = { version = "0.8.12", features = ["serde"] }
compact_str = { version = "0.9.0", features = ["serde"] }
async-trait = "0.1.89"

[dependencies]
async-trait.workspace = true
serde.workspace = true
tauri.workspace = true
thiserror.workspace = true
serde_repr.workspace = true
tracing.workspace = true
tokio.workspace = true
time.workspace = true
tracing-appender.workspace = true
tracing-core.workspace = true
tracing-subscriber.workspace = true
colored = { workspace = true, optional = true }
specta = { workspace = true, optional = true }
ahash = { workspace = true, optional = true }
compact_str = { workspace = true, optional = true }


# default to small, optimized release binaries
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"

[features]
default = []
colored = ["dep:colored", "tracing-subscriber/ansi"]
specta = ["dep:specta"]
timing = ["dep:compact_str", "dep:ahash"]
