[workspace]
members = [
  "examples/default-subscriber/src-tauri",
  "examples/custom-subscriber/src-tauri",
]
resolver = "2"

[package]
authors = ["Flight Science"]
name = "tauri-plugin-tracing"
license = "MIT"
edition = "2024"
version = "0.2.0"
repository = "https://github.com/fltsci/tauri-plugin-tracing"
description = "Use the tracing crate in your Tauri app"
links = "tauri-plugin-tracing"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]

[workspace.metadata.platforms.support]
windows = { level = "unknown", notes = "" }
linux = { level = "unknown", notes = "" }
macos = { level = "full", notes = "" }
android = { level = "unknown", notes = "" }
ios = { level = "unknown", notes = "" }

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[lints]
workspace = true

[build-dependencies]
tauri-plugin = { version = "2.5.2", features = ["build"] }

[workspace.dependencies]
serde = { version = "1.0.228", default-features = false }
tauri = { version = "2.9.5" }
thiserror = { version = "2.0.17", default-features = false }
serde_repr = "0.1.20"
tokio = { version = "1.48.0", features = ["full"] }
tracing = { version = "0.1.43" }
time = { version = "0.3.44", default-features = false, features = [
  "formatting",
  "local-offset",
] }
tracing-appender = "0.2.4"
rolling-file = "0.2.0"
tracing-core = "0.1.35"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "time"] }
memchr = "2.7.4"
colored = { version = "3.0.0" }
specta = { version = "=2.0.0-rc.22", features = ["derive"] }
ahash = { version = "0.8.12", features = ["serde"] }

[dependencies]
serde.workspace = true
tauri.workspace = true
thiserror.workspace = true
serde_repr.workspace = true
tracing.workspace = true
tokio.workspace = true
time.workspace = true
tracing-appender.workspace = true
rolling-file.workspace = true
tracing-core.workspace = true
tracing-subscriber.workspace = true
memchr.workspace = true
colored = { workspace = true, optional = true }
specta = { workspace = true, optional = true }
tracing-flame = { version = "0.2", optional = true }
inferno = { version = "0.12", default-features = false, optional = true }


# default to small, optimized release binaries
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"

[features]
default = []
colored = ["dep:colored", "tracing-subscriber/ansi"]
specta = ["dep:specta"]
flamegraph = ["dep:tracing-flame", "dep:inferno"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "strip_ansi"
harness = false

[[bench]]
name = "callstack"
harness = false
