[package]
name = "example-custom-subscriber"
version = "0.1.0"
description = "Example with custom subscriber using WebviewLayer"
authors = ["Flight Science"]
license = "MIT"
repository = ""
edition = "2024"

[lib]
name = "example_custom_subscriber_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", default-features = false, features = [
  "codegen",
] }

[dependencies]
tauri.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tauri-plugin-tracing = { path = "../../../", features = ["colored", "specta"] }

[dev-dependencies]
serde_json = "1"
