[package]
authors = ["Flight Science"]
description = "Example with custom subscriber using WebviewLayer"
edition = "2024"
license = "MIT"
name = "example-custom-subscriber"
repository = ""
version = "0.1.0"

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]
name = "example_custom_subscriber_lib"

[build-dependencies]
tauri-build = { default-features = false, features = [
  "codegen",
], version = "2.5.3" }

[dependencies]
tauri.workspace = true
tauri-plugin-tracing = { features = ["colored", "specta"], path = "../../../" }
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
serde_json = "1"
