[package]
name = "example-default-subscriber"
version = "0.1.0"
description = "Example using with_default_subscriber()"
authors = ["Flight Science"]
license = "MIT"
repository = ""
edition = "2024"

[lints]
workspace = true

[lib]
name = "example_default_subscriber_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", default-features = false, features = [
  "codegen",
] }

[dependencies]
tauri.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tauri-plugin-tracing = { path = "../../../", features = [
  "colored",
  "specta",
  "flamegraph",
] }

[dev-dependencies]
serde_json = "1"
