[package]
authors = ["Flight Science"]
description = "Example using with_default_subscriber()"
edition = "2024"
license = "MIT"
name = "example-default-subscriber"
repository = ""
version = "0.1.0"

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]
name = "example_default_subscriber_lib"

[build-dependencies]
tauri-build = { default-features = false, features = [
  "codegen",
], version = "2.5.3" }

[dependencies]
tauri.workspace = true
tauri-plugin-tracing = { features = [
  "colored",
  "flamegraph",
  "specta",
], path = "../../../" }
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
serde_json = "1"
